--- a/Mon site/css/styles.css
+++ b/Mon site/css/styles.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Modern+Antiqua&family=Prata&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
 
+::-webkit-scrollbar
+{
+    display: none;
+}
+
+
 *{
     font-family: 'Montserrat',cursive;
     scroll-behavior: smooth;
@@ -121,7 +127,11 @@ section.top-page::before{
     background: #34465d;
 }
 
-
+.rs:hover
+{
+    transform: translateY(-8px);
+    box-shadow: 0 10px 10px rgba(255, 255, 255, 0.2);
+}
 
 /* Menu de navigation */
 
@@ -199,7 +209,7 @@ nav.nav li a {
     padding: 200px 300px ;
     background-color: rgb(238, 201, 195);
 }
-S
+
 .compogrp{
     position: relative;
     font-size: 300px;
@@ -279,7 +289,7 @@ footer{
     
 }
 
-ul {
+.aligné {
     display: flex;
     text-align: center;
     position: absolute;
@@ -288,8 +298,8 @@ ul {
     transform: translate(-50%, -50%);
 }
 
-ul li {
-    background: black;
+.aligné li {
+    background: white;
     margin: 20px;
     list-style: none;
     font-size: 30px;
@@ -306,21 +316,173 @@ ul li a {
     text-decoration: none;
 }
 
-ul li:nth-child(1){
+.dl:nth-child(1){
     background: rgb(33,117,155);
 }
-ul li:nth-child(2){
+.dl:nth-child(2){
     background: rgb(0,180,137);
 }
-ul li:nth-child(3){
+.dl:nth-child(3){
     background: rgb(58,175,133);
 }
-ul li:nth-child(4){
+.dl:nth-child(4){
     background: rgb(189,195,199)
 }
 
-ul li:hover{
+.dl:hover{
     transform: translateY(-8px);
     box-shadow: 0 10px 10px rgba(255, 255, 255, 0.2);
 }
 
+.container {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #a9cbd7;
+
+}
+
+.timeline {
+    width: 100%;
+    height: auto;
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.timeline ul {
+    list-style: none;
+    width: 100%;
+}
+
+.timeline ul li {
+    padding: 20px;
+    background-color: #1e1f22;
+    color:white;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+}
+
+.timeline ul li:hover 
+{
+    transform: translateY(-8px);
+} 
+.timeline ul li:last-child {
+    margin-bottom: 0;
+}
+.timeline-content h1{
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.timeline-content p {
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 300;
+}
+.timeline-content{
+    font-size: 13px;
+    font-weight: 300;
+    margin-bottom: 10px;
+    letter-spacing: 1px;
+}
+
+
+@media only screen and  (min-width: 900px )
+{
+    .timeline::before{
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: 2px;
+        left:50% ;
+        background-color: gray;
+        transform: translateX(50%);
+
+    }
+
+    .timeline ul li {
+        margin-top: 50px;
+        width: 50%;
+        margin-bottom: 0px;
+        position: relative;
+    }
+
+
+    .timeline ul li:nth-child(odd)
+    {
+        float: left;
+        clear: right;
+        border-radius: 20px 0px 20px 20px ;
+        transform: translateX(-150px);
+    }
+
+    .timeline ul li:nth-child(even)
+    {
+    
+        float: right;
+        clear: left;
+        border-radius: 0px 20px 20px 20px ;
+        transform: translateX(100px);
+
+    }
+
+    .timeline ul li::after {
+        content: '';
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        background-color: gray;
+        border-radius: 50%;
+        top: 0;
+
+    }
+
+    .timeline ul li:nth-child(odd)::after {
+        right: -72px;
+        transform: translate(50%,-50%);
+    }
+
+   
+
+    .timeline ul li:nth-child(even)::after {
+        left: -88px;
+        transform: translate(50%,-50%);
+    }
+
+    .timeline ul li:hover::after{
+        background-color: aqua;
+    }
+
+    .timeline-content .date {
+        position: absolute;
+        top: -30px;
+        font-weight: 10;
+        font-size: 14px;
+    }
+
+    .titreTL {
+        position: relative;
+        display: flexbox;
+        align-items: center;
+    }
+
+    .bot{
+        
+        background-color: black;
+    }
+
+    .titreTL{
+        text-align: center;
+    }
+    .espace {
+        background-color: #a9cbd7;
+        color: #a9cbd7;
+    }
+    
+}
