--- a/Mon site/css/styles.css
+++ b/Mon site/css/styles.css
@@ -484,5 +484,10 @@ ul li a {
         background-color: #a9cbd7;
         color: #a9cbd7;
     }
-    
+
+    .titreTL a {
+      
+        color : black;
+
+    }
 }
